Bosco: Ensure extra images don't have extra space.

--- a/themes/bosco/style.css
+++ b/themes/bosco/style.css
@@ -513,6 +513,9 @@ a:active {
 .entry-thumbnail {
 	text-align: center;
 }
+.entry-thumbnail img {
+	vertical-align: bottom;
+}
 .entry-content,
 .entry-meta {
 	margin-left: auto;
